--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "eslint-config-htmlacademy": "2.1.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "webpack": "4.46.0",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.2"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "1.5.0",
-    "axios": "0.21.1",
+    "@reduxjs/toolkit": "^1.8.0",
+    "axios": "^0.21.4",
     "history": "5.0.1",
     "prop-types": "15.7.2",
     "react": "16.14.0",
