webpack setup updated

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trueconf",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
